[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bosch"
version = "0.0.1"
description = "..."
readme = "README.md"
authors = [{name = "Artem Fatkulin", email = "artem42fatkulin@gmail.com"}]
requires-python = ">=3.8"
dependencies = [
    "biopython",
    "pyhmmer",
    "pomegranate",
    "tqdm"
]